test/bad/BadUseCase.sysml
package P {
    // 'use' without 'case' — should error
    use def Foo;
}
